--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost/db_springboot?serverTimezone=America/Santiago&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/db_springboot
 spring.datasource.username=root
-spring.datasource.password=sasa
+spring.datasource.password=our_super_secret_password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
+
+
